<resources>
    <string name="app_name">Scared</string>
    <string name="notification_channel_name">Audio Channel</string>
    <string name="notification_channel_description">Shows the currently playing audio</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_image">Profile image</string>
    <string name="search_story_topics">Search story topics…</string>
    <string name="login_to_save_your_progress">Login to save your progress</string>
    <string name="login_to_save_the_progress_of_your_stories">Login to save the progress of your stories</string>
    <string name="new_stories_every_sunday">New stories every Sunday</string>
    <string name="reddit">Reddit</string>
    <string name="don_t_let_him_in">Don\'t let him in</string>
    <string name="featured_viewpager_image">Featured Viewpager Image</string>
    <string name="play_button_vp">Play Button VP</string>
    <string name="play">Play</string>
    <string name="written">Written</string>
    <string name="receive_email_updates">Receive email updates</string>
    <string name="save_stories_locally">Save stories locally</string>
    <string name="about_scared_app">About Scared App</string>
    <string name="how_to_add_my_own_stories">How to add my own stories ?</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="sign_in_up">Sign in/up</string>
    <string name="documentaries">Documentaries</string>
    <string name="reddit_stories">Reddit stories</string>
    <string name="new_videos_every_sunday">New videos every Sunday</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in">Sign in</string>
    <string name="not_signed_in">You are not signed in</string>
    <string name="website_url">https://gamedev-il.tech/index.php/scared-privacy-policy/</string>
    <string name="videos">Videos</string>

</resources>