<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/reddit"
                android:layout_marginStart="24dp"
                android:layout_marginTop="80dp"
                android:gravity="start"
                android:elevation="4dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/don_t_let_him_in"
                android:textSize="22sp"
                android:layout_marginStart="24dp"
                android:fontFamily="@font/baloo"
                android:gravity="start"
                android:elevation="4dp"
                app:layout_constraintTop_toBottomOf="@id/tvSubtitle"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:id="@+id/ivFeaturedStory"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/featured_viewpager_image"
                android:src="@drawable/img_story_example"
                app:layout_constraintTop_toTopOf="parent"/>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>