<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/brick_wall_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.main5.SearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/toolbar_background"
        android:elevation="5dp"
        android:id="@+id/clProfileBarSearch"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/login_to_save_your_progress"
            android:fontFamily="@font/baloo"
            android:textSize="14sp"
            android:textStyle="italic"
            />

        <ImageView
            android:id="@+id/ivArrowDropDown"
            android:layout_width="20dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/ic_arrow_drop_down"
            android:layout_height="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/profile_image" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvImageContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:elevation="4dp"
            app:cardCornerRadius="50dp"
            app:cardBackgroundColor="@color/purple_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/ivProfileImg"
                android:layout_width="40dp"
                android:background="@drawable/ic_account"
                android:layout_height="40dp"
                android:contentDescription="@string/profile_image" />
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/search_story_topics"
        app:layout_constraintTop_toBottomOf="@id/clProfileBarSearch"
        android:layout_margin="48dp"
        android:textColorHint="@color/grey"
        android:background="@drawable/search_bg"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>