<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.main5.VideoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/toolbar_background"
        android:elevation="5dp"
        android:id="@+id/clProfileBarSearch"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/login_to_save_your_progress"
            android:fontFamily="@font/baloo"
            android:textSize="14sp"
            android:textStyle="italic"
            />

        <ImageView
            android:id="@+id/ivArrowDropDown"
            android:layout_width="20dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/ic_arrow_drop_down"
            android:layout_height="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/profile_image" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvImageContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:elevation="4dp"
            app:cardCornerRadius="50dp"
            app:cardBackgroundColor="@color/purple_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/ivProfileImg"
                android:layout_width="40dp"
                android:background="@drawable/ic_account"
                android:layout_height="40dp"
                android:contentDescription="@string/profile_image" />
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vpAllVideos"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvNewStoriesEverySunday"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/new_videos_every_sunday"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@id/line"
                app:layout_constraintTop_toBottomOf="@id/vpAllVideos" />

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="24dp"
                android:background="@color/white"
                app:layout_constraintTop_toBottomOf="@id/tvNewStoriesEverySunday" />


            <TextView
                android:id="@+id/tvDocumentaries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/baloo"
                android:text="@string/documentaries"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvDocumentaries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDocumentaries" />

            <TextView
                android:id="@+id/tvRedditStories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/baloo"
                android:text="@string/reddit_stories"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvDocumentaries" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvReddit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvRedditStories" />

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:layout_constraintTop_toBottomOf="@id/rvReddit" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>

