<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/brick_wall_bg"
    tools:context=".ui.fragments.main5.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/toolbar_background"
        android:elevation="5dp"
        android:id="@+id/clProfileBarAudio"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/login_to_save_your_progress"
            android:fontFamily="@font/baloo"
            android:textSize="14sp"
            android:textStyle="italic"
            />

        <ImageView
            android:id="@+id/ivArrowDropDown"
            android:layout_width="20dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/ic_arrow_drop_down"
            android:layout_height="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/profile_image" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvImageContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:elevation="4dp"
            app:cardCornerRadius="50dp"
            app:cardBackgroundColor="@color/purple_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/ivProfileImg"
                android:layout_width="40dp"
                android:background="@drawable/ic_account"
                android:layout_height="40dp"
                android:contentDescription="@string/profile_image" />
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/tvNotLoggedIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/login_to_save_the_progress_of_your_stories"
        android:fontFamily="@font/baloo"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="48dp"/>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="10dp"
        android:textColor="@color/white"
        android:background="@drawable/btn_login_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="120dp"
        android:text="Sign in/up"/>




</androidx.constraintlayout.widget.ConstraintLayout>